@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  ADD: amaroK finally remembers if it was hidden on exit
   ADD: OSDPreview now has snap to regions.
   FIX: Newly shown columns in playlist can now be resized.
   FIX: BR 82020: next/prev buttons disabled when they shouldn't be.
